--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             </div>
         </nav>
     </header>
+
+    <!--First Block-->
+
     <div class="bgimage">
         <div class="maintext">
             <h1>
@@ -42,13 +45,41 @@
                 Look no futher. You came to the right ... place
             </h5>
             <button class="mainbtn">
-                <img src="https://img.icons8.com/small/16/000000/play.png"/>
-               <span>
+                <span>
+                    <img src="https://img.icons8.com/small/16/000000/play.png" />
+                </span>
                 WATCH INTRO VIDEO
-               </span> 
             </button>
         </div>
     </div>
+
+    <!--Second Block-->
+
+    <div class="second-block">
+        <div class="title-products">
+            <h2>
+                Latest Products
+            </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incididunt ut laboret dolore magna
+                aliqua enim minim veniam exercitation
+            </p>
+        </div>
+        <div class="products">
+            <div class="product">
+                <img src="./img/970x647/01.jpg" />
+                <div class="product-title">
+                    <h4>
+                        Workspace
+                    </h4>
+                    <p>
+                        MANAGEMENT
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </body>
 
 </html>
