--- a/index.html
+++ b/index.html
@@ -76,81 +76,141 @@
                         MANAGEMENT
                     </p>
                 </div>
+                <div class="workdiscr">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor
+                    </p>
+                </div>
+            <button class="btnmore">
+                <span>
+                    READ MORE
+                </span>
+            </button>
             </div>
-            <div class="workdiscr">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor
-                </p>
+            <div class="product">
+                <img src="./img/970x647/02.jpg" />
+                <div class="product-title">
+                    <h4>
+                        Minimalism
+                    </h4>
+                    <p>
+                        DEVELOPMENY
+                    </p>
+                </div>
+                <div class="workdiscr">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor
+                    </p>
+                </div>
+            <button class="btnmore">
+                <span>
+                    READ MORE
+                </span>
+            </button>
             </div>
-        </div>
-        <button class="btnmore">
-            <span>
-                READ MORE
-            </span>
-        </button>
-        <div class="product2">
-            <img src="./img/970x647/02.jpg" />
-            <div class="product2-title">
-            <h4>
-                Minimalism
-            </h4>
-            <p>
-                DEVELOPMENY
-            </p>
+            <div class="product">
+                <img src="./img/970x647/03.jpg" />
+                <div class="product-title">
+                    <h4>
+                        Cleant Style
+                    </h4>
+                    <p>
+                        DESIGN
+                    </p>
+                </div>
+                <div class="workdiscr">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor
+                    </p>
+                </div>
+            <button class="btnmore">
+                <span>
+                    READ MORE
+                </span>
+            </button>
             </div>
-        </div>
-        <div class="minidiscr">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor
-            </p>
-        </div>
-        <button class="btnmore2">
-            <span>
-                READ MORE
-            </span>
-        </button>
-        <div class="product3">
-            <img src="./img/970x647/03.jpg" />
-            <div class="product3-title">
-            <h4>
-                Clean Style
-            </h4>
-            <p>
-                DESIGN
-            </p>
-            </div>
-        </div>
-        <div class="styldiscr">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor
-            </p>
-        </div>
-        <button class="btnmore3">
-            <span>
-                READ MORE
-            </span>
-        </button>
+       </div>
     </div>
 
     <!--Third Block-->
 
    <div class="third-block">
-<div class="photofirst">
-<img src="./img/970x647/01.jpg" />
-</div>
-<div class="photosecond">
-    <img src="./img/970x647/03.jpg" />
-</div>
+    <div class="photofirst">
+      <img src="./img/970x647/01.jpg" />
+    </div>
+    <div class="photosecond">
+      <img src="./img/970x647/03.jpg" />
+    </div>
    </div>
 
-   <!--Fifth Block-->
+   <!--Fourth Block-->
 
-   <div class="fifth-block">
-       <div class="artcoding">
-           <img src="https://img.icons8.com/carbon-copy/100/000000/test-tube.png"/>
-           <h3>
-               Art og Coding
-           </h3>
+   <div class="fourth-block">
+       <div class="block4">
+        <div class="artcoding">
+            <img src="https://img.icons8.com/carbon-copy/100/000000/test-tube.png"/>
+            <h3>
+                Art og Coding
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor  
+            </p>
+        </div>
+       </div>
+       <div class="block4">
+        <div class="artcoding">
+            <img src="https://img.icons8.com/dotty/80/000000/device-information.png"/>
+            <h3>
+                Responsive Design
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor  
+            </p>
+        </div>
+       </div>
+       <div class="block4">
+        <div class="artcoding">
+            <img src="https://img.icons8.com/carbon-copy/100/000000/medal.png"/>
+            <h3>
+                Feature Reach
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor  
+            </p>
+        </div>
+       </div>
+       <div class="block4">
+        <div class="artcoding">
+            <img src="https://img.icons8.com/ios/50/000000/book.png"/>
+            <h3>
+                Useful Documentation
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor  
+            </p>
+        </div>
+       </div>
+       <div class="block4">
+        <div class="artcoding">
+            <img src="https://img.icons8.com/dotty/80/000000/clock.png"/>
+            <h3>
+                Fast Delivery
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor  
+            </p>
+        </div>
+       </div>
+       <div class="block4">
+        <div class="artcoding">
+            <img src="https://img.icons8.com/carbon-copy/100/000000/medal.png"/>
+            <h3>
+                Free Plugins
+            </h3>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor  
+            </p>
+        </div>
        </div>
    </div>
 </body>
