--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 Art og Coding
             </h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor  
+                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor 
             </p>
         </div>
        </div>
@@ -164,7 +164,7 @@
                 Responsive Design
             </h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor  
+                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
             </p>
         </div>
        </div>
@@ -175,7 +175,7 @@
                 Feature Reach
             </h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor  
+                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor 
             </p>
         </div>
        </div>
@@ -186,7 +186,7 @@
                 Useful Documentation
             </h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor  
+                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor 
             </p>
         </div>
        </div>
@@ -197,7 +197,7 @@
                 Fast Delivery
             </h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor  
+                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor 
             </p>
         </div>
        </div>
@@ -208,7 +208,7 @@
                 Free Plugins
             </h3>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor  
+                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor 
             </p>
         </div>
        </div>
