create sixth block

--- a/index.html
+++ b/index.html
@@ -78,14 +78,15 @@
                 </div>
                 <div class="workdiscr">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
+                        magna ut consequat siad esqudiat dolor
                     </p>
                 </div>
-            <button class="btnmore">
-                <span>
-                    READ MORE
-                </span>
-            </button>
+                <button class="btnmore">
+                    <span>
+                        READ MORE
+                    </span>
+                </button>
             </div>
             <div class="product">
                 <img src="./img/970x647/02.jpg" />
@@ -99,14 +100,15 @@
                 </div>
                 <div class="workdiscr">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
+                        magna ut consequat siad esqudiat dolor
                     </p>
                 </div>
-            <button class="btnmore">
-                <span>
-                    READ MORE
-                </span>
-            </button>
+                <button class="btnmore">
+                    <span>
+                        READ MORE
+                    </span>
+                </button>
             </div>
             <div class="product">
                 <img src="./img/970x647/03.jpg" />
@@ -120,99 +122,130 @@
                 </div>
                 <div class="workdiscr">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut consequat siad esqudiat dolor
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
+                        magna ut consequat siad esqudiat dolor
                     </p>
                 </div>
-            <button class="btnmore">
-                <span>
-                    READ MORE
-                </span>
-            </button>
+                <button class="btnmore">
+                    <span>
+                        READ MORE
+                    </span>
+                </button>
             </div>
-       </div>
+        </div>
     </div>
 
     <!--Third Block-->
 
-   <div class="third-block">
-    <div class="photofirst">
-      <img src="./img/970x647/01.jpg" />
+    <div class="third-block">
+        <div class="photofirst">
+            <img src="./img/970x647/01.jpg" />
+        </div>
+        <div class="photosecond">
+            <img src="./img/970x647/03.jpg" />
+        </div>
     </div>
-    <div class="photosecond">
-      <img src="./img/970x647/03.jpg" />
+
+    <!--Fourth Block-->
+
+    <div class="fourth-block">
+        <div class="blocks">
+            <div class="block1">
+                <div class="artcoding">
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/test-tube.png" />
+                    <h3>
+                        Art of Coding
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
+                    </p>
+                </div>
+            </div>
+            <div class="block1">
+                <div class="artcoding">
+                    <img src="https://img.icons8.com/dotty/80/000000/device-information.png" />
+                    <h3>
+                        Responsive Design
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
+                    </p>
+                </div>
+            </div>
+            <div class="block1">
+                <div class="artcoding">
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/medal.png" />
+                    <h3>
+                        Feature Reach
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
+                    </p>
+                </div>
+            </div>
+            <div class="block1">
+                <div class="artcoding">
+                    <img src="https://img.icons8.com/ios/50/000000/book.png" />
+                    <h3>
+                        Useful Documentation
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
+                    </p>
+                </div>
+            </div>
+            <div class="block1">
+                <div class="artcoding">
+                    <img src="https://img.icons8.com/dotty/80/000000/clock.png" />
+                    <h3>
+                        Fast Delivery
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
+                    </p>
+                </div>
+            </div>
+            <div class="block1">
+                <div class="artcoding">
+                    <img src="https://img.icons8.com/carbon-copy/100/000000/medal.png" />
+                    <h3>
+                        Free Plugins
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
-   </div>
 
-   <!--Fourth Block-->
+    <!--Fifth Block-->
 
-   <div class="fourth-block">
-       <div class="block1">
-        <div class="artcoding">
-            <img src="https://img.icons8.com/carbon-copy/100/000000/test-tube.png"/>
-            <h3>
-                Art og Coding
-            </h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor 
-            </p>
+    <div class="fifth-block">
+        <div class="displaying">
+            <div class="distext">
+                <h1>
+                    Displaying the Result
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
+                </p>
+            </div>
         </div>
-       </div>
-       <div class="block2">
-        <div class="artcoding">
-            <img src="https://img.icons8.com/dotty/80/000000/device-information.png"/>
-            <h3>
-                Responsive Design
-            </h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
-            </p>
+    </div>
+  
+
+    <!--Sixth Block-->
+
+    <div class="sixth-block">
+        <div class="imgsixth">
+            <img src="./img/800x400/01.jpg" class="firstimg">
+            <img src="./img/397x400/01.jpg" class="secondimg">
+            <img src="./img/397x300/01.jpg" class="cover">
+            <img src="./img/397x300/02.jpg" class="cover">
+            <img src="./img/397x300/03.jpg" class="cover">
         </div>
-       </div>
-       <div class="block3">
-        <div class="artcoding">
-            <img src="https://img.icons8.com/carbon-copy/100/000000/medal.png"/>
-            <h3>
-                Feature Reach
-            </h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor 
-            </p>
-        </div>
-       </div>
-       <div class="block4">
-        <div class="artcoding">
-            <img src="https://img.icons8.com/ios/50/000000/book.png"/>
-            <h3>
-                Useful Documentation
-            </h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor 
-            </p>
-        </div>
-       </div>
-       <div class="block5">
-        <div class="artcoding">
-            <img src="https://img.icons8.com/dotty/80/000000/clock.png"/>
-            <h3>
-                Fast Delivery
-            </h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor 
-            </p>
-        </div>
-       </div>
-       <div class="block6">
-        <div class="artcoding">
-            <img src="https://img.icons8.com/carbon-copy/100/000000/medal.png"/>
-            <h3>
-                Free Plugins
-            </h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor 
-            </p>
-        </div>
-       </div>
-   </div>
+    </div>
 </body>
 
 </html>
