--- a/index.html
+++ b/index.html
@@ -246,6 +246,94 @@
             <img src="./img/397x300/03.jpg" class="cover">
         </div>
     </div>
+
+    <!--Seventh Block-->
+
+    <div class="seven-block">
+        <div class="threebloks">
+            <div class="page">
+                <img src="https://img.icons8.com/carbon-copy/100/000000/test-tube.png" />
+                <div class="wrapper">
+                <h3>
+                     Starter 
+                </h3>
+                <h3>
+                    Kit 
+                </h3>
+                <h5>
+                    - $ 
+                </h5>
+                <h3>
+                    49
+                </h3>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
+                </p>
+                <span>
+                    Basic Features
+                </span>
+                <span>
+                    Up to 5 products
+                </span>
+                <span>
+                    50 User panels
+                </span>
+            </div>
+            <div class="page">
+                <img src="https://img.icons8.com/carbon-copy/100/000000/medal.png" />
+               <div class="wrapper">
+                <h3>
+                     Professional 
+                </h3>
+                <h5>
+                    - $
+                </h5>
+                <h3>
+                    149
+                </h3>
+               </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
+                </p>
+                <span>
+                    Basic Features
+                </span>
+                <span>
+                    Up to 5 products
+                </span>
+                <span>
+                    50 User panels
+                </span>
+            </div>
+            <div class="page">
+                <img src="https://img.icons8.com/pastel-glyph/64/000000/security-configuration.png" />
+                <div class="wrapper">
+                <h3>
+                     Advanced
+                </h3>
+                <h5>
+                    - $
+                </h5>
+                <h3>
+                    249
+                </h3>
+                </div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
+                </p>
+                <span>
+                    Basic Features
+                </span>
+                <span>
+                    Up to 5 products
+                </span>
+                <span>
+                    50 User panels
+                </span>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
