--- a/index.html
+++ b/index.html
@@ -270,15 +270,22 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
                 </p>
-                <span>
-                    Basic Features
-                </span>
-                <span>
-                    Up to 5 products
-                </span>
-                <span>
-                    50 User panels
-                </span>
+                <div class="list">
+                    <p>
+                     Basic Features
+                    </p>
+                     <p>
+                     Up to 5 products
+                     </p>
+                     <p>
+                     50 User panels
+                     </p>
+                 </div>
+                 <button class="chance">
+                    <span>
+                        CHOOSE
+                    </span>
+                </button>
             </div>
             <div class="page">
                 <img src="https://img.icons8.com/carbon-copy/100/000000/medal.png" />
@@ -296,15 +303,22 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
                 </p>
-                <span>
+                <div class="list">
+                   <p>
                     Basic Features
-                </span>
-                <span>
+                   </p>
+                    <p>
                     Up to 5 products
-                </span>
-                <span>
+                    </p>
+                    <p>
                     50 User panels
-                </span>
+                    </p>
+                </div>
+                <button class="chance">
+                    <span>
+                        CHOOSE
+                    </span>
+                </button>
             </div>
             <div class="page">
                 <img src="https://img.icons8.com/pastel-glyph/64/000000/security-configuration.png" />
@@ -322,18 +336,37 @@
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor
                 </p>
-                <span>
-                    Basic Features
-                </span>
-                <span>
-                    Up to 5 products
-                </span>
-                <span>
-                    50 User panels
-                </span>
+                <div class="list">
+                    <p>
+                     Basic Features
+                    </p>
+                     <p>
+                     Up to 5 products
+                     </p>
+                     <p>
+                     50 User panels
+                     </p>
+                 </div>
+                 <button class="chance">
+                    <span>
+                        CHOOSE
+                    </span>
+                </button>
             </div>
         </div>
     </div>
+
+
+<!--Eighth Block-->
+
+<div class="eight-block">
+      <div class="maintx">
+        <h2>
+            Customer Reviews
+        </h2>
+      </div>
+</div>
+
 </body>
 
 </html>
